lots of small improvements (predominantly of comments and code-style)